--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/sam"]
 	path = themes/sam
 	url = https://github.com/victoriadrake/hugo-theme-sam.git
+[submodule "resume"]
+	path = resume
+	url = https://github.com/jordancrane/pandoc_resume.git
