--- a/.gitmodules
+++ b/.gitmodules
@@ -6,5 +6,5 @@
 	url = https://github.com/jordancrane/pandoc_resume.git
 [submodule "public"]
 	path = public
-	url = https://github.com/jordancrane/jordancrane.github.io.git
+	url = git@github.com:jordancrane/jordancrane.github.io.git
 	branch = master
