--- a/config.toml
+++ b/config.toml
@@ -26,7 +26,7 @@ pygmentsCodefences       = true
     text = "logos"
 
 [[params.mainMenu]]
-    link = "resume.html"
+    link = "resume"
     text = "ethos"
 
 [[params.mainMenu]]
