--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "postcss-cli": "^7.1.1"
   },
   "scripts": {
-    "update-resume": "git submodule update --remote --merge resume && cd resume && docker-compose up -d && cp -f ./output/resume.html ../static/resume.html && cp -f ./output/resume.pdf ../static/resume.pdf",
+    "update-resume": "git submodule update --remote --merge resume && cd resume && docker-compose up -d && \\cp -f ./output/resume.html ../static/resume.html && \\cp -f ./output/resume.pdf ../static/resume.pdf",
     "deploy": "npm run update-resume && ./deploy.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
