Put resume files in a subdirectory

--- a/config.toml
+++ b/config.toml
@@ -26,7 +26,7 @@ pygmentsCodefences       = true
     text = "logos"
 
 [[params.mainMenu]]
-    link = "resume"
+    link = "resume/"
     text = "ethos"
 
 [[params.mainMenu]]
