--- a/config.toml
+++ b/config.toml
@@ -26,7 +26,7 @@ pygmentsCodefences       = true
     text = "logos"
 
 [[params.mainMenu]]
-    link = "resume/"
+    link = "https://resume.jordancrane.me"
     text = "ethos"
 
 [[params.mainMenu]]
