--- a/config.toml
+++ b/config.toml
@@ -1,37 +1,62 @@
-baseurl                  = "https://jordancrane.me"           # Your domain name
-languageCode             = "en-us"
-defaultContentLanguage   = "en"
-isMultilingual           = false
-title                    = "Jordan Crane"
-theme                    = "sam"
-pygmentsStyle            = "monokai"                        # https://help.farbox.com/pygments.html
-pygmentsCodefences       = true
-# googleAnalytics        = ""                               # Tracking code, eg. "UA-111111111-1"
+baseurl = "https://jordancrane.me"
+theme = "hugo-coder"
+languagecode = "en-us"
+defaultContentLanguage = "en"
+isMultilingual = false
+title = "Jordan Crane"
+
+paginate = 20
+canonifyurls = true
+
+pygmentsstyle = "bw"
+pygmentscodefences = true
+pygmentscodefencesguesssyntax = true
+
+# disqusShortname = "yourdiscussshortname"
 
 [params]
-    dateform             = "Mon Jan 02, 2006"
-    dateformfull         = "Mon Jan 2 2006 15:04:05 EST"
-    favicon              = "sam.ico"
-    homepage             = "home"                           # What to call the home page link
-    footerText           = "Personal site of Jordan Crane."
+    author = "Jordan Crane"
+    info = "Backend Software Engineer"
+    description = "Jordan Crane's personal website"
+    keywords = "blog,developer,personal"
+    avatarurl = "images/avatar.jpg"
 
-# Metadata for Open Graph and Twitter
-    description          = "Personal site of Jordan Crane."               # Max 160 characters show in search results
-    images               = ["tn.png"]                       # Image that shows on Twitter cards and Open Graph links to the site
-    title                = "Jordan Crane"
-    # rss                = ""
+    favicon_32 = "/images/favicon-32x32.png"
+    favicon_16 = "/images/favicon-16x16.png"
 
-[[params.mainMenu]]
-    link = "posts"
-    text = "logos"
+    footercontent = "Jordan Crane's personal website"
 
-[[params.mainMenu]]
-    link = "https://resume.jordancrane.me"
-    text = "ethos"
+    hidecredits = false
+    hidecopyright = false
 
-[[params.mainMenu]]
-    link = "about"
-    text = "pathos"
+    rtl = false
 
-[imaging]
-    quality = 75
+    math = true
+    custom_css = ["css/custom.css"]
+
+# Social links
+[[params.social]]
+    name = "Github"
+    icon = "fab fa-github fa-2x"
+    weight = 1
+    url = "https://github.com/jordancrane/"
+[[params.social]]
+    name = "LinkedIn"
+    icon = "fab fa-linkedin fa-2x"
+    weight = 2
+    url = "https://www.linkedin.com/in/jordancrane/"
+[[params.social]]
+    name = "Instagram"
+    icon = "fab fa-instagram fa-2x"
+    weight = 3
+    url = "https://www.instagram.com/jcrvne"
+
+# Menu links
+[[menu.main]]
+    name = "Blog"
+    weight = 1
+    url  = "/posts/"
+[[menu.main]]
+    name = "Resume"
+    weight = 2
+    url = "https://resume.jordancrane.me"
